--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <title>sokoban-html5</title>
 </head>
 <body>
-<h1>sokoban-html5</h1>
-<p>A sokoban game on web.</p>
+
+<h1>推箱子游戏开发计划</h1>
+<ol>
+    <li>网页版推箱子游戏</li>
+    <li>推箱子关卡管理器</li>
+</ol>
+
 </body>
 </html>
